src/snapshots/openapi_to_rust__test_helpers__underscore_type_names.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone)]
pub enum ResponseStreamEvent {
    Created(ResponseCreatedEvent),
    Completed(ResponseCompletedEvent),
}
impl serde::Serialize for ResponseStreamEvent {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        match self {
            Self::Created(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(Created),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                match object.get("type") {
                    Some(
                        serde_json::Value::String(tag),
                    ) if matches!(tag.as_str(), "created") => {}
                    Some(serde_json::Value::String(tag)) => {
                        return Err(
                            serde::ser::Error::custom(
                                format!(
                                    "discriminator `{}` value `{tag}` is not valid for variant `{}`",
                                    "type", stringify!(Created),
                                ),
                            ),
                        );
                    }
                    Some(_) => {
                        return Err(
                            serde::ser::Error::custom(
                                concat!(
                                    "discriminator `", "type",
                                    "` did not serialize as a string",
                                ),
                            ),
                        );
                    }
                    None => {
                        object
                            .insert(
                                "type".to_string(),
                                serde_json::Value::String("created".to_string()),
                            );
                    }
                }
                value.serialize(serializer)
            }
            Self::Completed(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(Completed),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                match object.get("type") {
                    Some(
                        serde_json::Value::String(tag),
                    ) if matches!(tag.as_str(), "completed") => {}
                    Some(serde_json::Value::String(tag)) => {
                        return Err(
                            serde::ser::Error::custom(
                                format!(
                                    "discriminator `{}` value `{tag}` is not valid for variant `{}`",
                                    "type", stringify!(Completed),
                                ),
                            ),
                        );
                    }
                    Some(_) => {
                        return Err(
                            serde::ser::Error::custom(
                                concat!(
                                    "discriminator `", "type",
                                    "` did not serialize as a string",
                                ),
                            ),
                        );
                    }
                    None => {
                        object
                            .insert(
                                "type".to_string(),
                                serde_json::Value::String("completed".to_string()),
                            );
                    }
                }
                value.serialize(serializer)
            }
        }
    }
}
impl<'de> serde::Deserialize<'de> for ResponseStreamEvent {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let value = serde_json::Value::deserialize(deserializer)?;
        let discriminator = value
            .get("type")
            .and_then(serde_json::Value::as_str)
            .ok_or_else(|| serde::de::Error::custom(
                concat!("missing string discriminator `", "type", "`",),
            ))?
            .to_string();
        match discriminator.as_str() {
            "created" => {
                let primary_error = match serde_json::from_value::<
                    ResponseCreatedEvent,
                >(value.clone()) {
                    Ok(payload) => return Ok(Self::Created(payload)),
                    Err(error) => error,
                };
                Err(serde::de::Error::custom(primary_error))
            }
            "completed" => {
                let primary_error = match serde_json::from_value::<
                    ResponseCompletedEvent,
                >(value.clone()) {
                    Ok(payload) => return Ok(Self::Completed(payload)),
                    Err(error) => error,
                };
                Err(serde::de::Error::custom(primary_error))
            }
            other => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "unknown discriminator value `{other}` for `{}`", "type",
                        ),
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseCreatedEvent {
    pub id: String,
    pub r#type: ResponseCreatedEventType,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ResponseCreatedEventType {
    #[default]
    #[serde(rename = "created")]
    Created,
}
impl ResponseCreatedEventType {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Created => "created",
        }
    }
}
impl ::std::fmt::Display for ResponseCreatedEventType {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for ResponseCreatedEventType {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseCompletedEvent {
    pub id: String,
    pub r#type: ResponseCompletedEventType,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ResponseCompletedEventType {
    #[default]
    #[serde(rename = "completed")]
    Completed,
}
impl ResponseCompletedEventType {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Completed => "completed",
        }
    }
}
impl ::std::fmt::Display for ResponseCompletedEventType {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for ResponseCompletedEventType {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaListResponseMessageBatch {
    pub id: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub last_id: Option<BetaListResponseMessageBatchLastId>,
}
///Last ID type
pub type BetaListResponseMessageBatchLastId = String;
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum BetaTool20241022CacheControl {
    #[default]
    #[serde(rename = "ephemeral")]
    Ephemeral,
}
impl BetaTool20241022CacheControl {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Ephemeral => "ephemeral",
        }
    }
}
impl ::std::fmt::Display for BetaTool20241022CacheControl {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for BetaTool20241022CacheControl {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
