src/snapshots/openapi_to_rust__test_helpers__x_stainless_const_bug.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum EventUnion {
    #[serde(rename = "response.reasoning_summary_part.done")]
    ReasoningSummaryPartDone(ResponseReasoningSummaryPartDoneEvent),
    #[serde(rename = "response.reasoning_summary_part.added")]
    ReasoningSummaryPartAdded(ResponseReasoningSummaryPartAddedEvent),
}
///Emitted when a reasoning summary part is completed.
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseReasoningSummaryPartDoneEvent {
    pub item_id: String,
    pub part: ReasoningItem,
}
///The type of the event. Always `response.reasoning_summary_part.done`.
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ResponseReasoningSummaryPartDoneEventType {
    #[default]
    #[serde(rename = "response.reasoning_summary_part.done")]
    ResponseReasoningSummaryPartDone,
}
///Emitted when a new reasoning summary part is added.
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseReasoningSummaryPartAddedEvent {
    pub item_id: String,
    pub part: ReasoningItem,
}
///The type of the event. Always `response.reasoning_summary_part.added`.
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ResponseReasoningSummaryPartAddedEventType {
    #[default]
    #[serde(rename = "response.reasoning_summary_part.added")]
    ResponseReasoningSummaryPartAdded,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ReasoningItem {
    pub text: String,
    ///The type of the object. Always `summary_text`.
    #[serde(rename = "type")]
    pub type_: ReasoningItemType,
}
///The type of the object. Always `summary_text`.
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ReasoningItemType {
    #[default]
    #[serde(rename = "summary_text")]
    SummaryText,
}
